[package]
name = "rcolors"
description = "A simple terminal colorization/style tool written in Rust."
homepage = "https://github.com/StevenCyb/rcolors"
repository = "https://github.com/StevenCyb/rcolors"
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"
exclude = [
    ".github/*",
    ".vscode/*",
]

[dependencies]
atty = "0.2.14"
